# PrimeSoloMiner

./: ChangeLog  Makefile.am  README.md  aclocal.m4  autogen.sh  bigmath.h  config.ini  configure.ac  core.h  miner.cpp  prime.cpp
cuda/: compaction.cu  cuda.h  sieve.cu  simd1024math.h
